# personalized-Marketing

./: README.md  pyproject.toml  requirements.txt
src/trend_content/: crew.py  main.py
src/trend_content/config/: agents.yaml  tasks.yaml
