[project]
name = "trend_content"
version = "0.1.0"
description = "trend_content using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
trend_content = "trend_content.main:run"
run_crew = "trend_content.main:run"
train = "trend_content.main:train"
replay = "trend_content.main:replay"
test = "trend_content.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
